fixed jumpy transition: combine enter and leave anime

--- a/assets/Animations.css
+++ b/assets/Animations.css
@@ -4,7 +4,8 @@
       header/tab
    ~~~~~~~~~~~~~~~~ */
 
-.slide-left-enter-active {
+.slide-left-enter-active,
+.slide-left-leave-active {
   transition: all 0.3s ease-out;
 }
 
@@ -12,10 +13,10 @@
 /* .slide-fade-leave-active below version 2.1.8 */ {
   transform: translateX(50px);
 }
-
+/*
 .slide-left-leave-active {
   transition: all 200ms ease-in;
-}
+}*/
 .slide-left-leave-to {
   transform: translateX(-50px);
 }
