--- a/assets/Stylesheet.css
+++ b/assets/Stylesheet.css
@@ -257,7 +257,8 @@ and the friend icons on the left */
 }
 
 [type="checkbox"] {
-  border-radius: 5px;
+  /*
+  border-radius: 5px;*/
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -276,8 +277,9 @@ and the friend icons on the left */
   width: 1rem;
   color: #f09381;
   background-color: #fff;
-  border-color: #6b7280;
-  border-width: 1px;
+  /* use outline instead of border for checkboxes */
+  outline: 1px solid #6b7280;
+  box-shadow: 0 0 3px #ddd;
 }
 
 [type="checkbox"]:focus {
